--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
-    "build": "next build -p 8080",
+    "dev": "next dev -p 3001",
+    "build": "next build -p 3001",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@studio-freight/react-lenis": "^0.0.46",
     "next": "14.1.3",
+    "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18"
   },
